--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:full": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "bcryptjs": "^3.0.2",
@@ -26,6 +27,7 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
